
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct utsname {char* release; int version; int machine; } ;
struct TYPE_3__ {int kernel_version; } ;


 int ARRAY_SIZE (TYPE_1__*) ;
 int EXIT_FAILURE ;
 int dprintf (char*,...) ;
 int exit (int ) ;
 struct utsname get_kernel_version () ;
 int kernel ;
 TYPE_1__* kernels ;
 int snprintf (char*,int,char*,char*,char*) ;
 scalar_t__ strcmp (char*,int ) ;
 int * strstr (int ,char*) ;
 char* strtok (int ,char*) ;

void detect_versions() {
    struct utsname u;
    char kernel_version[512];

    u = get_kernel_version();

    if (strstr(u.machine, "64") == ((void*)0)) {
        dprintf("[-] system is not using a 64-bit kernel\n");
        exit(EXIT_FAILURE);
    }

    if (strstr(u.version, "-Ubuntu") == ((void*)0)) {
        dprintf("[-] system is not using an Ubuntu kernel\n");
        exit(EXIT_FAILURE);
    }

    char *u_ver = strtok(u.version, " ");
    snprintf(kernel_version, 512, "%s %s", u.release, u_ver);

    int i;
    for (i = 0; i < ARRAY_SIZE(kernels); i++) {
        if (strcmp(kernel_version, kernels[i].kernel_version) == 0) {
            dprintf("[.] kernel version '%s' detected\n", kernels[i].kernel_version);
            kernel = i;
            return;
        }
    }

    dprintf("[-] kernel version not recognized\n");
    exit(EXIT_FAILURE);
}
